[gd_scene load_steps=9 format=3 uid="uid://3w04km5aayt0"]

[ext_resource type="Script" uid="uid://cnik53v2g3ser" path="res://Scripts/player_slash.gd" id="1_bkwyl"]
[ext_resource type="Texture2D" uid="uid://ds211fbe0msyk" path="res://Game assets for demo/slash.png" id="2_o6sij"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tntsh"]
size = Vector2(42, 18.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsb3g"]
atlas = ExtResource("2_o6sij")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oave6"]
atlas = ExtResource("2_o6sij")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efov8"]
atlas = ExtResource("2_o6sij")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds6ht"]
atlas = ExtResource("2_o6sij")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ybnx7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsb3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oave6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efov8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds6ht")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[node name="Area2D" type="Area2D" groups=["PlayerProjectile"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_bkwyl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_tntsh")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(4, 0)
enable_node_path = NodePath("../CollisionShape2D")

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ybnx7")
frame = 3
frame_progress = 1.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
